--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
+    "@hookform/devtools": "^4.3.1",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
